# prfs-monorepo

./: .dockerignore  .eslintrc.js  .gitignore  .prettierrc.json  .yarnrc.yml  Cargo.toml  ci  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
internals/ci/: .gitignore  Cargo.toml  ci.toml  ci.toml.example
internals/ci/src/: build_handle.rs  build_status.rs  create_envs.rs  deps.rs  envs.rs  main.rs  paths.rs  task.rs
source/hyper_tungstenite2/: Cargo.toml
source/hyper_tungstenite2/src/: lib.rs  peer_map.rs
source/prfs_admin_credential/: Cargo.toml  package.json
source/prfs_admin_credential/js/: index.ts
source/prfs_admin_credential/json_bindings/: master_account_ids.json
source/prfs_admin_credential/src/: lib.rs  master_accounts.rs  mock.rs  paths.rs  tests.rs
source/prfs_api_server/: .gitignore  Cargo.toml  createBindings.ts  package.json  parseData.ts  sample.env
source/prfs_api_server/data/: circuit_drivers.json  circuit_input_types.json  circuit_types.json  drivers.json  dynamic_sets.json  prfs_accounts.json  prfs_circuit_drivers.json  prfs_circuit_types.json  prfs_policy_items.json  prfs_proof_types.json  proof_types.json
source/prfs_api_server/data_api/: error_codes.json  response_code.json
source/prfs_api_server/migrations/: 20230822053142_default.sql
source/prfs_api_server/src/: envs.rs  lib.rs  local.rs  log.rs  middleware.rs  paths.rs  router.rs  seed.rs  state.rs
source/prfs_asset_server/: Cargo.toml
source/prfs_asset_server/src/: envs.rs  lib.rs  local.rs  main.rs  paths.rs  state.rs
source/prfs_atst_server/: Cargo.toml
source/prfs_atst_server/src/: envs.rs  lib.rs  log.rs  mock.rs
source/prfs_axum_lib/: Cargo.toml
source/prfs_axum_lib/src/: cors.rs  error.rs  lib.rs  macros.rs  resp.rs
source/prfs_backend/: .gitignore  Cargo.toml
source/prfs_backend/seed/: proofs.json
source/prfs_backend/src/: lib.rs  macros.rs  main.rs  middleware.rs  router.rs  state.rs
source/prfs_circom_analyzer/: Cargo.toml
source/prfs_circom_analyzer/src/: lib.rs
source/prfs_circuit_circom/: Cargo.toml  package.json
source/prfs_circuit_circom/circuits/: circuits.json
source/prfs_circuit_circom/data/: circuits.json  circuits2.json
source/prfs_circuit_circom/src/: driver_id.rs  lib.rs  main.rs  paths.rs
source/prfs_circuit_interface/: Cargo.toml  package.json  tsconfig.json
source/prfs_circuit_interface/bindings/: AddrMembershipV1Data.ts  AddrMembershipV1Inputs.ts  CircuitTypeData.ts  CircuitTypeId.ts  HASH_DATA_V1.ts  HashData.ts  MERKLE_SIG_POS_RANGE_V1.ts  MerkleSigPosExactV1CircuitPubInputs.ts  MerkleSigPosExactV1Data.ts  MerkleSigPosExactV1Inputs.ts  MerkleSigPosExactV1PresetVals.ts  MerkleSigPosExactV1PublicInputs.ts  MerkleSigPosRangeV1.ts  MerkleSigPosRangeV1CircuitPubInputs.ts  MerkleSigPosRangeV1Data.ts  MerkleSigPosRangeV1Inputs.ts  MerkleSigPosRangeV1PresetVals.ts  MerkleSigPosRangeV1PublicInputs.ts  PublicInputsInterface.ts  RangeData.ts  RangeOption.ts  SigData.ts  SimpleHashV1.ts  SimpleHashV1Data.ts  SimpleHashV1Inputs.ts  SpartanMerkleProof.ts
source/prfs_circuit_interface/js/: artifacts.ts  hash_data.ts  index.ts  merkle_proof.ts
source/prfs_circuit_interface/src/: addr_membership.rs  circuit_type_data.rs  circuit_type_id.rs  circuit_types.rs  circuits.ts  index.ts  lib.rs  merkle_sig_pos_range.rs  sig_data.rs  sig_data.ts  simple_hash.rs
source/prfs_circuit_server/: .gitignore  Cargo.toml  package.json
source/prfs_circuit_server/src/: main.rs
source/prfs_circuit_type/: Cargo.toml
source/prfs_circuit_type/data/: circuit_input_types.json  circuit_types.json
source/prfs_circuit_type/src/: lib.rs  paths.rs  program.rs
source/prfs_circuits_circom/: .gitignore  Cargo.toml  circuits.toml.example  package.json
source/prfs_circuits_circom/circuits/: circuits.json
source/prfs_circuits_circom/src/: access.rs  builder.rs  driver_id.rs  lib.rs  main.rs  paths.rs
source/prfs_common_server_state/: Cargo.toml
source/prfs_common_server_state/src/: envs.rs  lib.rs  paths.rs  state.rs
source/prfs_crypto/: Cargo.toml
source/prfs_crypto/src/: lib.rs  test.rs
source/prfs_db_driver/: Cargo.toml
source/prfs_db_driver/src/: bind_limit.rs  database2.rs  executor.rs  lib.rs
source/prfs_db_interface/: Cargo.toml
source/prfs_db_interface/src/: config.rs  database.rs  database2.rs  hexutils.rs  lib.rs  models.rs
source/prfs_driver_utils_wasm/: Cargo.toml  package.json  tsconfig.json  webpack.config.js
source/prfs_driver_utils_wasm/js/: index.ts
source/prfs_driver_utils_wasm/src/: api.rs  lib.rs
source/prfs_email_auth_server/: .gitignore  Cargo.toml  app.js  app.py  app.ts  app2.ts  app3.ts  nodejs_example.ts  package.json
source/prfs_email_auth_server/src/: envs.rs  lib.rs  paths.rs
source/prfs_entities/: Cargo.toml  package.json
source/prfs_entities/bindings/: AddPrfsIndexRequest.ts  AddPrfsIndexResponse.ts  AttestTwitterAccRequest.ts  AttestTwitterAccResponse.ts  AuthenticateRequest.ts  AuthenticateResponse.ts  CircuitDriver.ts  CircuitDriverInstance.ts  CircuitGeneratedPublicInput.ts  CircuitInput.ts  CircuitInputMeta.ts  CircuitInputType.ts  CircuitInputTypeProperty.ts  CircuitType.ts  CircuitTypeId.ts  CircuitTypeLabel.ts  ClosePrfsIdSessionMsgPayload.ts  ClosePrfsIdSessionRequest.ts  ClosePrfsIdSessionResponse.ts  ClosePrfsIdSessionResult.ts  CloseSessionMsgPayload.ts  CloseSessionResult.ts  CoinbaseExchangeRates.ts  CoinbaseExchangeRatesResult.ts  ComputeCryptoAssetSizeTotalValuesRequest.ts  ComputeCryptoAssetSizeTotalValuesResponse.ts  ComputeCryptoAssetTotalValuesRequest.ts  ComputeCryptoAssetTotalValuesResponse.ts  ComputeCryptoSizeTotalValuesRequest.ts  ComputeCryptoSizeTotalValuesResponse.ts  (+301 more)
source/prfs_id_api_error_codes/: Cargo.toml  package.json
source/prfs_id_session_server/: Cargo.toml
source/prfs_lib/: Cargo.toml
source/prfs_prf_asset_server/: .gitignore  Cargo.toml
source/prfs_tree_maker/: .gitignore  Cargo.toml  sample.env
source/prfs_tree_server/: Cargo.toml
source/prfs_wasm/: Cargo.toml
source/prfs_web_fetcher/: Cargo.toml
(+4104 files in other folders)
