[workspace]
members = [
  # externals
  "externals/secq256k1",
  "externals/poseidon",
  "externals/Spartan-secq",
  "externals/circuit_reader",

  # utils
  "source/hyper_utils",
  "source/hyper_tungstenite2",

  # prfs lib
  "source/prfs_db_interface",
  "source/prfs_tree_maker",
  "source/prfs_crypto",
  "source/prfs_crypto_js",
  "source/prfs_entities",
  "source/prfs_common_server_state",
  "source/prfs_web_scraper",
  "source/prfs_web_fetcher",
  "source/prfs_api_server",
  "source/prfs_id_server",
  "source/prfs_atst_server",
  "source/prfs_asset_server",
  "source/prfs_circuits_circom",
  "source/prfs_driver_spartan_wasm",

  # internals
  "internals/ci",

  # Shy
  "source/shy_api_server"
]
