[workspace]
members = [
  # Project
  "source/project_root",

  # externals
  "externals/secq256k1",
  "externals/poseidon",
  "externals/Spartan-secq",
  "externals/circuit_reader",


  # prfs lib
  "source/prfs_db_driver",
  "source/prfs_db_interface",
  "source/prfs_circuit_interface",
  "source/prfs_env",
  "source/prfs_driver_interface",
  "source/prfs_tree_lib",
  "source/prfs_tree_server",
  "source/prfs_tree_server_task_queue",
  "source/prfs_tree_api_error_codes",
  "source/prfs_crypto",
  "source/prfs_crypto_js",
  "source/prfs_entities",
  "source/prfs_common_server_state",
  "source/prfs_web_scraper",
  "source/prfs_web_fetcher",
  "source/prfs_api_rs",
  "source/prfs_api_server",
  "source/prfs_api_error_codes",
  "source/prfs_id_api_error_codes",
  "source/prfs_id_server",
  "source/prfs_atst_server",
  "source/prfs_atst_api_error_codes",
  "source/prfs_asset_server",
  "source/prfs_circuits_circom",
  "source/prfs_driver_spartan_wasm",
  "source/prfs_axum_lib",
  "source/prfs_id_session_api_error_codes",
  "source/prfs_web3_rs",

  # internals
  "internals/ci",

  # Shy
  "source/shy_db_interface",
  "source/shy_api_error_codes",
  "source/shy_api_server",
  "source/shy_entities",
]
