[package]
name = "ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features=["cargo"] }
chrono = "0.4.26"
colored = "2.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

circuit_reader = { path = "../../externals/circuit_reader" }
prfs_api_server = { path = "../../source/prfs_api_server" }
