[package]
name = "prfs_ci"
version = "0.1.0"
edition = "2021"
default-run = "prfs_ci"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features=["cargo"] }
chrono = "0.4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
which = "4.4.0"
toml = "0.8.8"

[[bin]]
name = "prfs_ci"
path = "src/main.rs"
