[package]
name = "hyper_tungstenite2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# colored = "2.0"
# tokio = { version = "1", features = ["full"] }
# tokio-stream = "0.1"
# tokio-postgres = "0.7.7"
# lazy_static = "1.4"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# log = "0.4"
# chrono = "0.4.23"
# hex = "0.4.3"
# dotenvy = "0.15"
# envy = "0.4"
# rust_decimal = { version = "1.29", features = ["db-postgres"] }
# rust_decimal_macros = "1.29"
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# tracing-appender = "0.2"
# uuid = { version = "1.4.1", features = ["v4", "serde"] }
# base62 = "2.0.2"
# csv = "1.2.2"
# git2 = "0.18.1"

# http-body-util = "0.1"
# hyper_014 = { package = "hyper", version = "0.14" }
# hyper = { version = "1.1", features = ["full"] }
# hyper-tls-05 = { package = "hyper-tls", version = "0.5.0" }
# hyper-tls = "0.6"
# hyper-util = { version = "0.1", features = ["full"] }

# prfs_db_interface = { path = "../prfs_db_interface" }
# prfs_tree_maker = { path = "../prfs_tree_maker" }
# prfs_circuits_circom = { path = "../prfs_circuits_circom" }
# prfs_entities = { path = "../prfs_entities" }

http-body-util = "0.1.0"
hyper = { version = "1.0.0" }
hyper-util = { version = "0.1.0", features = ["tokio"] }
pin-project-lite = "0.2.10"
tokio = "1.2.0"
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"

hyper_utils = { path = "../hyper_utils" }
