[package]
name = "hyper_tungstenite2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1.0"
hyper = { version = "1.0.0" }
hyper-util = { version = "0.1.0", features = ["tokio"] }
pin-project-lite = "0.2.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"
futures = { version = "0.3" }

prfs_axum_lib = { path = "../prfs_axum_lib" }
