[package]
name = "prfs_admin_credential"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = { verison = "0.4", features = ["serde"] }
lazy_static = "1.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
strum = "0.25"
strum_macros = { version = "0.25" }

project_root = { path = "../project_root" }
