[package]
name = "prfs_asset_server"
version = "0.1.0"
edition = "2021"
default-run = "prfs_asset_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
tokio = { version = "1.28", features = ["full"] }
routerify = "3"
routerify-cors = "3"
hyper = "0.14"
hyper-staticfile = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multer = "2.0"
lazy_static = "1.4"
dotenvy = "0.15"
envy = "0.4"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"

prfs_circuit_circom = { path = "../prfs_circuit_circom" }
prfs_entities = { path = "../prfs_entities" }

[[bin]]
name = "prfs_asset_server"
path = "src/bin/server.rs"

[[bin]]
name = "upload_s3_asset"
path = "src/bin/upload_s3_asset.rs"
