[package]
name = "prfs_asset_server"
version = "0.1.0"
edition = "2021"
default-run = "prfs_asset_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
tokio = { version = "1", features = ["full"] }
hyper_014 = { package = "hyper", version = "0.14" }
hyper = { version = "1.1", features = ["full"] }
hyper-staticfile = "0.10.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multer = "2.0"
lazy_static = "1.4"
dotenvy = "0.15"
envy = "0.4"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
walkdir = "2"

hyper_utils = { path = "../hyper_utils/" }
prfs_circuits_circom = { path = "../prfs_circuits_circom" }
prfs_entities = { path = "../prfs_entities" }

[[bin]]
name = "prfs_asset_server"
path = "src/bin/server.rs"

[[bin]]
name = "seed_assets"
path = "src/bin/seed_assets.rs"
