[package]
name = "prfs_asset_server"
version = "0.1.0"
edition = "2021"
default-run = "prfs_asset_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multer = "2.0"
lazy_static = "1.4"
dotenvy = "0.15"
envy = "0.4"
aws-config = "0.56.1"
aws-sdk-s3 = "0.33.0"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

prfs_axum_lib = { path = "../prfs_axum_lib" }
prfs_db_driver = { path = "../prfs_db_driver" }
prfs_circuits_circom = { path = "../prfs_circuits_circom" }
prfs_crypto = { path ="../prfs_crypto" }
prfs_entities = { path = "../prfs_entities" }

[[bin]]
name = "prfs_asset_server"
path = "src/bin/server.rs"

[[bin]]
name = "seed_assets"
path = "src/bin/seed_assets.rs"
