[package]
name = "prfs_atst_server"
version = "0.1.0"
edition = "2021"


[dependencies]
colored = "2.0"
ethers-signers = "2.0.10"
ethers-core = "2.0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-postgres = "0.7"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4"
chrono = "0.4"
hex = "0.4.3"
dotenvy = "0.15"
envy = "0.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
csv = "1.2.2"
git2 = "0.18.1"
url = "2.5.0"
google-gmail1 = "5.0"

prfs_axum_lib = { path = "../prfs_axum_lib" }
prfs_db_driver = { path = "../prfs_db_driver" }
prfs_db_interface = { path = "../prfs_db_interface" }
prfs_atst_api_error_codes = { path = "../prfs_atst_api_error_codes" }
prfs_tree_maker = { path = "../prfs_tree_maker" }
prfs_circuits_circom = { path = "../prfs_circuits_circom" }
prfs_entities = { path = "../prfs_entities" }
prfs_common_server_state = { path = "../prfs_common_server_state" }
prfs_web_scraper = { path = "../prfs_web_scraper" }
prfs_web_fetcher = { path = "../prfs_web_fetcher" }
