[package]
name = "prfs_axum_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
dotenvy = "0.15"
envy = "0.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

reqwest = { version = "0.11", features = ["json"] }
axum = { version = "0.7.4", features=["ws"] }
axum-extra = "0.9.2"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio-tungstenite = "0.21"

http-body-util = "0.1"
hyper = { version = "1.1", features = ["full"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["full"] }

prfs_db_interface = { path = "../prfs_db_interface" }
prfs_tree_lib = { path = "../prfs_tree_lib" }
prfs_circuits_circom = { path = "../prfs_circuits_circom" }
prfs_entities = { path = "../prfs_entities" }
