[package]
name = "prfs_circuit_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
chrono = { verison = "0.4", features = ["serde"] }
colored = "2.0"
lazy_static = "1.4"
# rust_decimal = { version = "1.29", features = ["db-postgres"] }
# rust_decimal_macros = "1.29"
ts-rs = { version = "7.1", features = ["chrono-impl"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "rust_decimal", "json", "uuid" ] }
strum = "0.25"
strum_macros = { version = "0.25" }
