[package]
name = "prfs_circuit_type"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
ts-rs = { version = "6.2", features=["chrono-impl"] }

prfs_entities = { path = "../prfs_entities/" }
