[package]
name = "prfs_circuits_circom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"

project_root = { path = "../project_root" }
circuit_reader = { path = "../../externals/circuit_reader" }
prfs_crypto = { path = "../prfs_crypto" }
prfs_entities = { path = "../prfs_entities" }
prfs_rust_utils = { path = "../prfs_rust_utils" }
prfs_circuit_interface = { path = "../prfs_circuit_interface" }
prfs_driver_interface = { path = "../prfs_driver_interface" }
