[package]
name = "prfs_common_server_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0"
ethers-signers = "2.0.10"
ethers-core = "2.0.10"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
hex = "0.4.3"
dotenvy = "0.15"
envy = "0.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
base62 = "2.0.2"
git2 = "0.18.1"
futures = { version = "0.3" }

prfs_db_driver = { path = "../prfs_db_driver" }
prfs_db_interface = { path = "../prfs_db_interface" }
prfs_web_fetcher = { path = "../prfs_web_fetcher" }
prfs_axum_lib = { path = "../prfs_axum_lib" }
