[package]
name = "prfs_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
rs_merkle = "1.4.1"
primitive-types = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
ff = "0.12.0"
neptune = "13.0.0"
halo2curves = "0.4.0"

poseidon = { path = "../../externals/poseidon" }
secq256k1 = { path = "../../externals/secq256k1" }
