[package]
name = "prfs_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0"
rs_merkle = "1.4.1"
primitive-types = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
ff = "0.13"
group = "0.13"
rand = "0.8"
k256 = { version = "0.13.3", features = ["ecdsa-core", "arithmetic"] }
rust_decimal = { version = "1.29", features = ["db-postgres"] }
crypto-bigint = "0.5.5"

poseidon = { path = "../../externals/poseidon" }
secq256k1 = { path = "../../externals/secq256k1" }
