[package]
name = "prfs_db_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { verison = "0.4", features = ["serde"] }
tokio-stream = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"]}
futures-util = "0.3.26"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
lazy_static = "1.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "rust_decimal", "json", "uuid" ] }

prfs_entities = { path = "../prfs_entities" }
shy_entities = { path = "../shy_entities" }
prfs_crypto = { path = "../prfs_crypto/" }
