[package]
name = "prfs_db_interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.54.1"
log = "0.4"
chrono = { verison = "0.4", features = ["serde"] }
hyper-tls = "0.5.0"
tokio-stream = "0.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"]}
futures-util = "0.3.26"
hex = "0.4.3"
bytemuck = "1.13.1"
flate2 = "1.0.25"
primitive-types = "0.12.1"
colored = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
lazy_static = "1.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
group = "0.12"
rand = "0.8"
ff = "0.12"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "rust_decimal", "json" ] }
