[package]
name = "prfs_email_auth_server"
version = "0.1.0"
edition = "2021"
default-run = "prfs_email_auth_server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["runtime-tokio"]
runtime-tokio = ["async-native-tls/runtime-tokio", "async-smtp/runtime-tokio", "async-imap/runtime-tokio"]

[dependencies]
colored = "2.0"
ethers-signers = "2.0.10"
ethers-core = "2.0.10"
tokio = { version = "1.28", features = ["full"] }
tokio-stream = "0.1"
tokio-postgres = "0.7.7"
lazy_static = "1.4"
hyper = "0.14"
hyper-tls = "0.5.0"
routerify = "3"
routerify-cors = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = "0.4.23"
hex = "0.4.3"
dotenvy = "0.15"
envy = "0.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
base62 = "2.0.2"
csv = "1.2.2"
git2 = "0.18.1"

imap = "2.4.1"
base64 = "0.21"
google-oauth = { version = "1" }
native-tls = { version = "0.2.2" }
async-imap = { version = "0.9.3", default-features = false}
async-native-tls = { version = "0.5", default-features = false }
async-smtp = { version = "0.8", default-features = false }
futures = "0.3.29"

prfs_db_interface = { path = "../prfs_db_interface" }
prfs_tree_maker = { path = "../prfs_tree_maker" }
prfs_circuits_circom = { path = "../prfs_circuits_circom" }
prfs_entities = { path = "../prfs_entities" }

[[bin]]
name = "prfs_email_auth_server"
path = "src/bin/server.rs"

