[package]
name = "prfs_entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
log = "0.4"
chrono = { verison = "0.4", features = ["serde"] }
hex = "0.4.3"
colored = "2.0"
lazy_static = "1.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
ts-rs = { version = "6.2", features = ["chrono-impl"] }
strum_macros = "0.25"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "chrono", "rust_decimal", "json","uuid" ] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
