[package]
name = "prfs_id_api_error_codes"
version = "0.1.0"
edition = "2021"


[dependencies]
colored = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-postgres = "0.7"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4"
chrono = "0.4"
dotenvy = "0.15"
envy = "0.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
futures = { version = "0.3" }

prfs_axum_lib = { path = "../prfs_axum_lib" }
prfs_entities = { path = "../prfs_entities" }
prfs_common_server_state = { path = "../prfs_common_server_state" }
