[package]
name = "prfs_id_session_server"
version = "0.1.0"
edition = "2021"


[dependencies]
colored = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-postgres = "0.7"
lazy_static = "1.4"
http-body-util = "0.1"
hyper_014 = { package = "hyper", version = "0.14" }
hyper = { version = "1.1", features = ["full"] }
hyper-tls-05 = { package = "hyper-tls", version = "0.5.0" }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["full"] }
routerify = "3"
routerify-cors = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4"
chrono = "0.4"
dotenvy = "0.15"
envy = "0.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
futures = { version = "0.3" }
# tokio-tungstenite = "0.21"
# tungstenite = "0.21"

axum = { version = "0.7.4", features=["ws"] }
axum-extra = "0.9.2"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio-tungstenite = "0.21"

hyper_utils = { path = "../hyper_utils" }
hyper_tungstenite2 = { path = "../hyper_tungstenite2/" }
prfs_db_interface = { path = "../prfs_db_interface" }
prfs_tree_maker = { path = "../prfs_tree_maker" }
prfs_circuits_circom = { path = "../prfs_circuits_circom" }
prfs_entities = { path = "../prfs_entities" }
prfs_common_server_state = { path = "../prfs_common_server_state" }
