[package]
name = "prfs_prf_asset_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
routerify = "3"
routerify-cors = "3"
hyper = "0.14"
hyper-staticfile = "0.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
notify = "6.0.1"
