[package]
name = "prfs_tree_maker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features=["cargo"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
log = "0.4"
chrono = "0.4.23"
hyper-tls = "0.5.0"
tokio-stream = "0.1"
tokio-postgres = "0.7.7"
futures-util = "0.3.26"
hex = "0.4.3"
bytemuck = "1.13.1"
flate2 = "1.0.25"
dotenv = "0.15.0"
primitive-types = "0.12.1"
colored = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
lazy_static = "1.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
group = "0.12"
rand = "0.8"
ff = "0.12"

# halo2_proofs = { git = "https://github.com/taigalabs/halo2", branch = "pse/24" }
# halo2_gadgets = { git = "https://github.com/taigalabs/halo2", branch = "pse/24" }

prfs_db_interface = { path = "../prfs_db_interface" }
