[package]
name = "prfs_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "prfs_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"]}
wasm-bindgen-rayon = { version = "1.0", optional = true }
console_error_panic_hook = "0.1.7"
merlin = "3.0.0"
web-sys = { version = "0.3.60", features = ["console"] }
serde_json = "1.0.89"
num-bigint = "0.4.3"
serde = "1.0.151"
byteorder = "1.4.3"
ff = "0.12.0"
serde-wasm-bindgen = "0.4.5"
bincode = "1.3.3"

# Not directly using getrandom in this crate, 
# but some dependencies require getrandom 
# and the "js" features needs to be enabled for wasm compatibility
getrandom = { version = "0.2.8", features = ["js"] }
itertools = "0.9.0"
group = "0.12.0"

poseidon = { path = "../../externals/poseidon" }
spartan = { path = "../../externals/Spartan-secq", default-features = false }
secq256k1 = { path = "../../externals/secq256k1" }

[dev-dependencies]
rs_merkle = "1.4.1"
primitive-types = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
omit-default-module-path = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
omit-default-module-path = true

[features]
multicore = ["wasm-bindgen-rayon"]
