[package]
name = "prfs_wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "prfs_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"]}
wasm-bindgen-rayon = { version = "1.0", optional = true }
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3.60", features = ["console"] }
serde = "1.0"
serde_json = "1.0.89"
serde-wasm-bindgen = "0.4.5"

prfs_lib = { path = "../prfs_lib" }

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
omit-default-module-path = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
omit-default-module-path = true

[features]
multicore = ["wasm-bindgen-rayon"]
