[package]
name = "prfs_web_fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
http-body-util = "0.1"
hyper = { version = "1.1", features = ["full"] }
hyper-tls = "0.6"
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
log = "0.4"
chrono = "0.4"
dotenvy = "0.15"
envy = "0.4"
rust_decimal = { version = "1.29", features = ["db-postgres"] }
rust_decimal_macros = "1.29"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
bytes = "1"
pin-project-lite = "0.2"

prfs_entities = { path = "../prfs_entities" }
prfs_axum_lib = { path = "../prfs_axum_lib" }
